# avr-calibration

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TESTING.md  TODOS.md  pyproject.toml
.github/workflows/: docker.yml  test.yml
calibrate/: __init__.py  cli.py  config.py  measurement.py  preflight.py  storage.py  web.py
calibrate/adapters/: __init__.py
deploy/: avr-calibration.service  entrypoint.sh  install.sh
docs/deployment/: pi-zero-w.md
tests/: conftest.py  test_history_show.py  test_measurement.py  test_preflight.py  test_storage.py  test_web.py
