[project]
name = "avr-calibration"
version = "0.1.3"
description = "AI-first home theater calibration — closed-loop bass optimization"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "denonavr>=0.12",
    "fastapi>=0.110",
    "httpx>=0.27",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pytta>=0.1",
    "sounddevice>=0.4",
    "uvicorn>=0.29",
]

[project.scripts]
calibrate = "calibrate.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["calibrate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["calibrate"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
