[project]
name = "avr-calibration"
version = "0.1.3"
description = "AI-first home theater calibration — closed-loop bass optimization"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "denonavr>=0.12",
    "fastapi>=0.99.0",
    "httpx>=0.27",
    "numpy>=1.24.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "sounddevice>=0.4",
    "uvicorn>=0.29",
]

[project.scripts]
calibrate = "calibrate.cli:cli"

[project.optional-dependencies]
# pytta pulls in numba→llvmlite (LLVM + cmake required to build from source).
# Install the measurement extra on x86/ARMv7+ only; ARMv6 (Pi Zero W) skips it.
# The web UI uses browser audio so pytta is only needed for the CLI measure command.
measurement = [
    "pytta>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["calibrate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["calibrate"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
